--- a/cursos/style.css
+++ b/cursos/style.css
@@ -66,6 +66,7 @@ a:hover {
 main {
   background-color: #4d4f6d;
   padding: 10px;
+  padding-bottom: 20px;
 }
 
 .linkCurso {
@@ -117,6 +118,7 @@ section {
   border-radius: 10px;
   overflow: hidden;
   list-style-type: none;
+  margin-bottom: 20px;
 }
 .logocursos {
   max-width: 150px;
@@ -138,6 +140,9 @@ footer {
   line-height: 30px;
   margin: 12px;
 }
+/* Seu código CSS existente */
+
+/* ... (seu código anterior) ... */
 
 @media screen and (max-width: 1024px) {
   .header {
@@ -147,6 +152,7 @@ footer {
 
   .menu-btn {
     display: block;
+    order: -1; /* Mudei a ordem para posicionar o botão de menu no início da linha */
   }
 
   .nav {
@@ -162,5 +168,33 @@ footer {
 
   .ul.active {
     display: flex;
+  }
+
+  @media screen and (max-width: 768px) {
+    .header {
+      flex-direction: row; /* Alterado para exibir o menu ao lado */
+    }
+
+    .ul {
+      display: flex;
+      flex-direction: row; /* Exibir itens do menu na horizontal */
+      position: absolute;
+      top: 50px;
+      left: 0;
+      width: 100%;
+      background-color: #4d4f6d;
+      z-index: 1;
+    }
+
+    .ul.active {
+      flex-direction: column;
+    }
+
+    .ul li {
+      border-bottom: none;
+      padding: 10px;
+      width: 100%;
+      text-align: center;
+    }
   }
 }
