--- a/cursos/style.css
+++ b/cursos/style.css
@@ -26,6 +26,10 @@
   flex-direction: column;
   background-color: #4d4f6d;
   padding: 10px;
+  position: absolute;
+  top: 80px; /* Ajusta a posição do menu dropdown */
+  left: 0;
+  width: 100%;
 }
 
 .menu-btn {
@@ -37,8 +41,8 @@
   border: none;
   padding: 10px;
   margin: 0;
+  order: -1; /* Muda a ordem do botão no layout */
 }
-
 .menu-btn:hover {
   background-color: #6b6e91;
 }
@@ -114,7 +118,7 @@ section {
 .curso2,
 .curso3,
 .curso4 {
-  padding: 10px;
+  margin-top: 10px;
   border-radius: 10px;
   overflow: hidden;
   list-style-type: none;
@@ -142,14 +146,30 @@ footer {
 }
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 768px) {
   .header {
-    height: 100%;
+    height: auto;
     flex-direction: column;
   }
-  .ul {
+
+  .menu-btn {
+    order: 0; 
+  }
+
+  .nav {
+    display: flex;
+    position: static;
     flex-direction: column;
     align-items: center;
-    padding: 4px;
+    width: 100%;
+    text-align: center;
+  }
+} 
+.curso1,
+  .curso2,
+  .curso3,
+  .curso4 {
+    margin-top: 20px;
+    margin-bottom: 40px; 
   }
 }
