--- a/cursos/style.css
+++ b/cursos/style.css
@@ -1,78 +1,3 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background-color: #2b2d42;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #f4f3ee;
-}
-
-.header {
-  width: 95vw;
-  height: 24vh;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  text-transform: uppercase;
-}
-
-.logo {
-  width: 140px;
-  height: 140px;
-  margin-bottom: 20px;
-}
-
-.nav {
-  display: none;
-  flex-direction: column;
-  background-color: #4d4f6d;
-  padding: 10px;
-  position: absolute;
-  top: 80px;
-  left: 0;
-  width: 100%;
-}
-
-.menu-btn {
-  font-size: 1.5em;
-  cursor: pointer;
-  text-align: center;
-  background-color: #4d4f6d;
-  color: #f4f3ee;
-  border: none;
-  padding: 10px;
-  margin-top: -120px;
-  margin-left: 300px;
-  order: 0;
-  border-radius: 10px;
-}
-
-.menu-btn:hover {
-  background-color: #6b6e91;
-}
-
-.ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-.ul li {
-  padding: 7.5px;
-  text-align: center;
-  border-bottom: 1px solid #6b6e91;
-}
-
-a {
-  text-decoration: none;
-  color: #f4f3ee;
-}
-
-a:hover {
-  opacity: 0.6;
-}
-
 main {
   background-color: #4d4f6d;
   padding: 10px;
@@ -93,6 +18,7 @@ main {
 .linkCurso:hover {
   background-color: #6b6e91;
 }
+
 
 nav a:hover {
   color: blue;
@@ -116,7 +42,7 @@ section {
   width: 95vw;
   height: auto;
   margin: 50px 0px 10px;
-  margin-top: 150px;
+  margin-top: 50px;
   margin-bottom: 100px;
   display: flex;
   align-items: center;
@@ -140,18 +66,65 @@ section {
   float: left;
   margin-right: 20px;
 }
-
 .redes {
   width: 25px;
   height: 25px;
 }
+.cadastro-section {
+  margin: 500px;
+  padding: 0px;
+  margin-top: -50px;
+  margin-bottom: 0px;
+}
 
-footer {
-  width: 96vw;
-  height: 25vh;
+.cadastro-form {
+  background-color: transparent;
+  color: #f4f3ee;
+  padding: 50px;
+  border-radius: 15px;
+  margin: 50px 0;
+}
+
+.cadastro-form h2 {
   text-align: center;
-  line-height: 30px;
-  margin: 12px;
+  margin-bottom: 10px;
+}
+
+.cadastro-form label {
+  display: block;
+  margin-bottom: 8px;
+}
+
+.cadastro-form input {
+  background-color: #e6ffe6;
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  border: 1px solid #6b6e91;
+  color: black;
+}
+
+.cadastro-form button {
+  background-color: #4d4f6d;
+  color: #f4f3ee;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.cadastro-form button:hover {
+  background-color: #6b6e91;
+}
+
+.cadastro-form input.campo-invalido {
+  border: 2px solid red;
+  background-color: #ffe6e6;
+}
+
+.cadastro-form input.campo-valido {
+  border: 2px solid green;
+  background-color: #e6ffe6;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -174,11 +147,9 @@ footer {
     padding-left: 100px;
   }
 
-  .menu-btn {
-    top: -150px;
-    position: relative;
-    margin-top: 0;
-    margin-left: 250px;
-    margin-right: 30px;
+  .cadastro-section {
+    margin: 50px;
+    padding: 0px;
+    margin-top: -50px;
+    margin-bottom: 0px;
   }
-}
