--- a/historia_da_programacao/historia.css
+++ b/historia_da_programacao/historia.css
@@ -1,95 +1,64 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #2b2d42;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: #f4f3ee;
+}
 
 main {
   background-color: #4d4f6d;
+}
+
+h1 {
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 200;
   padding: 10px;
-  padding-bottom: 20px;
+  background-color: #4d4f6d;
+}
+
+h3 {
+  margin: 60px 60px 24px 60px;
 }
 
 section {
-    width: 95vw;
-    height: auto;
-    margin: 20px 0px 10px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-    border-radius: 10px;
-    overflow: hidden;
-    padding: 20px;
-  }
-
-  .link {
-    display: inline-block;
-    background-color: #4d4f6d;
-    color: #f4f3ee;
-    padding: 8px 16px;
-    text-decoration: none;
-    border-radius: 5px;
-    margin-top: 10px;
-    margin-right: 70vw;
-    transition: background-color 0.3s ease;
-  }
-
-  .img {
-  width: 100%;
-  object-fit: cover;
-  width: 14vw;
-  height: 32vh;
-  padding: 3.7px;
+  background-color: #4d4f6d;
+  margin-bottom: 12px;
 }
-  
-  .div {
-    width: 100%; 
-    height: auto; 
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    order: 1;
-  }
-  
-  .titulo {
-    font-size: 1.5em;
-    font-weight: 400;
-  }
-  
-  .p {
-    margin: 10px; 
-    padding: 10px;
-    text-align: center;
-  }
-  
-  ul li {
-    text-align: center;
-    padding: 12px;
-    text-decoration: none;
-    justify-content: space-around;
-  }
-  
-  nav a:hover {
-    color: blue;
-h1 {
-    text-align: center;
-    text-transform: uppercase;
-    font-weight: 200;
-    padding: 10px;
-    background-color: #4d4f6d;
-  }
-  
-  @media only screen and (max-width: 768px) {
-    section {
-      margin: 10px 0px; /
-    }
-  
-    .link {
-      margin-right: 0;
-      padding: 8px 16px;
-      margin-right: 70vw;
-    }
-    .img {
-        width: 100%;
-        object-fit: cover;
-        width: 50vw;
-        height: 32vh;
-        padding: 3.7px;
-      }
-  }
+
+div {
+  display: flex;
+  justify-content: space-around;
+  padding: 12px;
+  background-color: #2b2d42;
+  margin: 12px 30px 30px 12px;
+  border-radius: 16px;
+  margin-bottom: 20px;
+}
+
+div p {
+  margin-bottom: 20px;
+}
+
+div h3 {
+  padding: 10px;
+  line-height: 1.5em;
+  font-size: medium;
+  margin-bottom: 20px;
+}
+
+div a {
+  padding: 20px;
+}
+
+.divfim{
+  height: 60px;
+  background-color: #4d4f6d;
+}
+
+.redes {
+  width: 25px;
+  height: 25px;
+}
