--- a/cursos/style.css
+++ b/cursos/style.css
@@ -19,9 +19,8 @@ main {
   background-color: #6b6e91;
 }
 
-
-nav a:hover {
-  color: blue;
+a:hover {
+  opacity: 0.6;
 }
 
 h1 {
@@ -125,32 +124,4 @@ section {
 .cadastro-form input.campo-valido {
   border: 2px solid green;
   background-color: #e6ffe6;
-}
-
-@media only screen and (max-width: 1024px) {
-  .header {
-    flex-direction: column;
-    align-items: flex-start;
-    height: 100%;
-  }
-
-  .ul {
-    flex-direction: column;
-    align-items: center;
-    padding: 4px;
-  }
-
-  .nav {
-    top: 140px;
-    padding: 15px;
-    padding-right: 100px;
-    padding-left: 100px;
-  }
-
-  .cadastro-section {
-    margin: 50px;
-    padding: 0px;
-    margin-top: -50px;
-    margin-bottom: 0px;
-  }
 }
