--- a/dicas_e_tutoriais/dicas-main-style.css
+++ b/dicas_e_tutoriais/dicas-main-style.css
@@ -30,7 +30,7 @@ section {
 }
 
 div {
-  flex: 0 0 calc(33.333% - 24px);
+  width: 400px;
   display: block;
   justify-content: space-around;
   padding: 16px;
@@ -49,6 +49,10 @@ div h3 {
   margin-bottom: 20px;
 }
 
+div span img {
+  width: 100%;
+}
+
 .saibaMais {
   display: inline-block;
   background-color: #4d4f6d;
@@ -62,7 +66,7 @@ div h3 {
 
 @media screen and (max-width: 768px) {
   div {
-    flex: 0 0 calc(33.333% - 24px);
+    width: 300px;
     display: block;
     justify-content: space-around;
     padding: 16px;
