--- a/cursos/style.css
+++ b/cursos/style.css
@@ -40,6 +40,7 @@ h2 {
 h3 {
   font-size: medium;
   margin-bottom: 40px;
+  line-height: 1.5em;
 }
 
 section {
@@ -74,6 +75,7 @@ section {
   width: 25px;
   height: 25px;
 }
+
 .cadastro-section {
   margin: 300px;
   padding: 0px;
@@ -108,10 +110,34 @@ section {
   color: black;
 }
 
-.cadastro-form div select.tech {
+.cadastro-form div select.selecao {
   background-color: #e6ffe6;
   width: 100%;
   padding: 8px;
+  border: 1px solid #6b6e91;
+  color: black;
+}
+
+.cadastro-form div select.news {
+  background-color: #e6ffe6;
+  width: 100%;
+  padding: 8px;
+  border: 1px solid #6b6e91;
+  color: black;
+}
+
+.cadastro-form div.selecao {
+  background-color: #e6ffe6;
+  width: 100%;
+  margin-bottom: 16px;
+  border: 1px solid #6b6e91;
+  color: black;
+}
+
+.cadastro-form div.news {
+  background-color: #e6ffe6;
+  width: 100%;
+  margin-bottom: 16px;
   border: 1px solid #6b6e91;
   color: black;
 }
@@ -123,14 +149,6 @@ section {
   border: none;
   border-radius: 5px;
   cursor: pointer;
-}
-
-.cadastro-form div.selecao {
-  background-color: #e6ffe6;
-  width: 100%;
-  margin-bottom: 16px;
-  border: 1px solid #6b6e91;
-  color: black;
 }
 
 .cadastro-form button:hover {
