--- a/cursos/style.css
+++ b/cursos/style.css
@@ -32,15 +32,19 @@ h1 {
 }
 
 h2 {
-  text-align: center;
   padding: 12px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 h3 {
   font-size: medium;
   margin-bottom: 40px;
   line-height: 1.5em;
+}
+
+h4 {
+  font-size: small;
+  margin: 20px;
 }
 
 section {
