--- a/styles/home-main-style.css
+++ b/styles/home-main-style.css
@@ -40,6 +40,23 @@ main ul li {
   height: 250px;
 }
 
+.spotfy{
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 2%;
+ 
+}
+iframe{
+  border-radius: 4%;
+  width:80%;
+  margin-top: 50px;
+  
+
+}
+
 @media screen and (max-width: 768px) {
   .telahome {
     margin: auto;
